# mlwiki

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
api/: app.py  cli.py
api/templates/: page.html
client/: next.config.mjs  package-lock.json  package.json
client/app/: layout.tsx  page.module.css  page.tsx
client/app/about/: page.tsx
client/app/view/[article]/: page.tsx
client/components/: AppContainer.module.css  AppContainer.tsx  ViewArticle.tsx
